src/Heddle.Language/js/HeddleParser.js
// Generated from HeddleParser.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import HeddleParserListener from './HeddleParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class HeddleParser extends antlr4.Parser {

    static grammarFileName = "HeddleParser.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, "'='", null, null, "'??'", "'?'", "'&&'", 
                            "'||'", "'=='", "'!='", "'<<'", "'>>'", "'<='", 
                            "'>='", "'<'", "'>'", "'+'", "'*'", "'/'", "'%'", 
                            "'&'", "'|'", "'^'", "'!'", "'~'", "'['", "']'", 
                            null, null, null, "'\"\"'", "'}'" ];
    static symbolicNames = [ null, "TEXT", "WS", "IMPORT_TOKEN", "ID", "ROOT_REF", 
                             "MEMBER_P", "OUT", "SUB_START", "SUB_CLOSE", 
                             "CSHARP_END", "CSHARP_TOKEN", "CSHARP_START", 
                             "DEF_STARTNAME", "DEF_ENDNAME", "DELIM", "DEF_START", 
                             "DEF_CLOSE", "RAW", "OUT_PARAMSTART", "OUT_PARAMEND", 
                             "DEF_OUT", "TRUE", "FALSE", "NULL", "INT_LIT", 
                             "REAL_LIT", "STRING_LIT", "CHAR_LIT", "OP_QQ", 
                             "OP_QUESTION", "OP_AND", "OP_OR", "OP_EQ", 
                             "OP_NEQ", "OP_LSHIFT", "OP_RSHIFT", "OP_LE", 
                             "OP_GE", "OP_LT", "OP_GT", "OP_PLUS", "OP_MINUS", 
                             "OP_STAR", "OP_SLASH", "OP_PERCENT", "OP_AMP", 
                             "OP_PIPE", "OP_CARET", "OP_NOT", "OP_TILDE", 
                             "LBRACKET", "RBRACKET", "COMMA", "THIS", "ASSIGN", 
                             "COMMENT", "SKIP_WS", "SUB_COMMENT", "SUB_SKIP_WS", 
                             "DEF_COMMENT", "DEF_TYPE", "DEF_WS", "DEFP_COMMENT", 
                             "DEFP_WS", "IMPORT_COMMENT", "CALL_RETURN_COMMENT", 
                             "CALL_SKIP_WS", "OUT_COMMENT", "OUT_SKIP_WS", 
                             "CALL_COMMENT", "CALL_WS", "CALL_UNKNOWN", 
                             "DEFP_ASSIGN", "DEFP_COMMA", "DEFP_MINUS", 
                             "CALL_OP_QQ", "CALL_OP_QUESTION", "CALL_OP_AND", 
                             "CALL_OP_OR", "CALL_OP_EQ", "CALL_OP_NEQ", 
                             "CALL_OP_LSHIFT", "CALL_OP_RSHIFT", "CALL_OP_LE", 
                             "CALL_OP_GE", "CALL_OP_LT", "CALL_OP_GT", "CALL_OP_PLUS", 
                             "CALL_OP_STAR", "CALL_OP_SLASH", "CALL_OP_PERCENT", 
                             "CALL_OP_AMP", "CALL_OP_PIPE", "CALL_OP_CARET", 
                             "CALL_OP_NOT", "CALL_OP_TILDE", "CALL_LBRACKET", 
                             "CALL_RBRACKET", "ISTR_OPEN_BRACE_ESC", "ISTR_CLOSE_BRACE_ESC", 
                             "ISTR_END", "IVSTR_QUOTE_ESC", "HOLE_CLOSE" ];
    static ruleNames = [ "heddle", "raw", "definition", "def", "def_props", 
                         "def_prop_item", "def_prop", "def_slot", "def_prop_default", 
                         "def_literal", "def_base", "def_type", "default_chain", 
                         "import_block", "outblock", "chain", "call", "named_argument", 
                         "member_expression", "extension_id", "csharp_expression", 
                         "native_expression", "expr", "arg_list", "literal", 
                         "subtemplate", "text" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = HeddleParser.ruleNames;
        this.literalNames = HeddleParser.literalNames;
        this.symbolicNames = HeddleParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 22:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 17);
    		case 1:
    			return this.precpred(this._ctx, 16);
    		case 2:
    			return this.precpred(this._ctx, 15);
    		case 3:
    			return this.precpred(this._ctx, 14);
    		case 4:
    			return this.precpred(this._ctx, 13);
    		case 5:
    			return this.precpred(this._ctx, 12);
    		case 6:
    			return this.precpred(this._ctx, 11);
    		case 7:
    			return this.precpred(this._ctx, 10);
    		case 8:
    			return this.precpred(this._ctx, 9);
    		case 9:
    			return this.precpred(this._ctx, 8);
    		case 10:
    			return this.precpred(this._ctx, 7);
    		case 11:
    			return this.precpred(this._ctx, 6);
    		case 12:
    			return this.precpred(this._ctx, 21);
    		case 13:
    			return this.precpred(this._ctx, 20);
    		case 14:
    			return this.precpred(this._ctx, 19);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	heddle() {
	    let localctx = new HeddleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, HeddleParser.RULE_heddle);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 61;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294835454) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 4294967295) !== 0) || ((((_la - 64)) & ~0x1f) === 0 && ((1 << (_la - 64)) & 4294967295) !== 0) || ((((_la - 96)) & ~0x1f) === 0 && ((1 << (_la - 96)) & 255) !== 0)) {
	            this.state = 59;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 54;
	                this.definition();
	                break;

	            case 2:
	                this.state = 55;
	                this.import_block();
	                break;

	            case 3:
	                this.state = 56;
	                this.outblock();
	                break;

	            case 4:
	                this.state = 57;
	                this.raw();
	                break;

	            case 5:
	                this.state = 58;
	                this.text();
	                break;

	            }
	            this.state = 63;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	raw() {
	    let localctx = new RawContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, HeddleParser.RULE_raw);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 64;
	        this.match(HeddleParser.RAW);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	definition() {
	    let localctx = new DefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, HeddleParser.RULE_definition);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 66;
	        this.match(HeddleParser.DEF_START);
	        this.state = 68; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 67;
	            this.def();
	            this.state = 70; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===13);
	        this.state = 72;
	        this.match(HeddleParser.DEF_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def() {
	    let localctx = new DefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, HeddleParser.RULE_def);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 74;
	        this.match(HeddleParser.DEF_STARTNAME);
	        this.state = 75;
	        this.match(HeddleParser.ID);
	        this.state = 77;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===19) {
	            this.state = 76;
	            this.def_props();
	        }

	        this.state = 80;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===15) {
	            this.state = 79;
	            this.def_base();
	        }

	        this.state = 82;
	        this.match(HeddleParser.DEF_ENDNAME);
	        this.state = 84;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===21) {
	            this.state = 83;
	            this.default_chain();
	        }

	        this.state = 86;
	        this.subtemplate();
	        this.state = 88;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===61) {
	            this.state = 87;
	            this.def_type();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def_props() {
	    let localctx = new Def_propsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, HeddleParser.RULE_def_props);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.match(HeddleParser.OUT_PARAMSTART);
	        this.state = 99;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===4) {
	            this.state = 91;
	            this.def_prop_item();
	            this.state = 96;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===53) {
	                this.state = 92;
	                this.match(HeddleParser.COMMA);
	                this.state = 93;
	                this.def_prop_item();
	                this.state = 98;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 101;
	        this.match(HeddleParser.OUT_PARAMEND);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def_prop_item() {
	    let localctx = new Def_prop_itemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, HeddleParser.RULE_def_prop_item);
	    try {
	        this.state = 105;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 103;
	            this.def_prop();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 104;
	            this.def_slot();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def_prop() {
	    let localctx = new Def_propContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, HeddleParser.RULE_def_prop);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 107;
	        this.match(HeddleParser.ID);
	        this.state = 108;
	        this.match(HeddleParser.DELIM);
	        this.state = 109;
	        this.match(HeddleParser.ID);
	        this.state = 111;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===55) {
	            this.state = 110;
	            this.def_prop_default();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def_slot() {
	    let localctx = new Def_slotContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, HeddleParser.RULE_def_slot);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 113;
	        this.match(HeddleParser.ID);
	        this.state = 114;
	        this.match(HeddleParser.DEF_TYPE);
	        this.state = 115;
	        this.match(HeddleParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def_prop_default() {
	    let localctx = new Def_prop_defaultContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, HeddleParser.RULE_def_prop_default);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 117;
	        this.match(HeddleParser.ASSIGN);
	        this.state = 118;
	        this.def_literal();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def_literal() {
	    let localctx = new Def_literalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, HeddleParser.RULE_def_literal);
	    var _la = 0;
	    try {
	        this.state = 129;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 25:
	        case 26:
	        case 42:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 121;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===42) {
	                this.state = 120;
	                this.match(HeddleParser.OP_MINUS);
	            }

	            this.state = 123;
	            _la = this._input.LA(1);
	            if(!(_la===25 || _la===26)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 124;
	            this.match(HeddleParser.STRING_LIT);
	            break;
	        case 28:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 125;
	            this.match(HeddleParser.CHAR_LIT);
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 126;
	            this.match(HeddleParser.TRUE);
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 127;
	            this.match(HeddleParser.FALSE);
	            break;
	        case 24:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 128;
	            this.match(HeddleParser.NULL);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def_base() {
	    let localctx = new Def_baseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, HeddleParser.RULE_def_base);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this.match(HeddleParser.DELIM);
	        this.state = 132;
	        this.match(HeddleParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def_type() {
	    let localctx = new Def_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, HeddleParser.RULE_def_type);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this.match(HeddleParser.DEF_TYPE);
	        this.state = 135;
	        this.match(HeddleParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	default_chain() {
	    let localctx = new Default_chainContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, HeddleParser.RULE_default_chain);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 137;
	        this.match(HeddleParser.DEF_OUT);
	        this.state = 138;
	        this.chain();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	import_block() {
	    let localctx = new Import_blockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, HeddleParser.RULE_import_block);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 140;
	        this.match(HeddleParser.IMPORT_TOKEN);
	        this.state = 144;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 141;
	            this.match(HeddleParser.WS);
	            this.state = 146;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 147;
	        this.match(HeddleParser.SUB_START);
	        this.state = 149; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 148;
	            this.text();
	            this.state = 151; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294507646) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 4294967295) !== 0) || ((((_la - 64)) & ~0x1f) === 0 && ((1 << (_la - 64)) & 4294967295) !== 0) || ((((_la - 96)) & ~0x1f) === 0 && ((1 << (_la - 96)) & 255) !== 0));
	        this.state = 153;
	        this.match(HeddleParser.SUB_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	outblock() {
	    let localctx = new OutblockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, HeddleParser.RULE_outblock);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this.match(HeddleParser.OUT);
	        this.state = 156;
	        this.chain();
	        this.state = 158;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	        if(la_===1) {
	            this.state = 157;
	            this.subtemplate();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	chain() {
	    let localctx = new ChainContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, HeddleParser.RULE_chain);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        this.call();
	        this.state = 165;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,16,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 161;
	                this.match(HeddleParser.DELIM);
	                this.state = 162;
	                this.call(); 
	            }
	            this.state = 167;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,16,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	call() {
	    let localctx = new CallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, HeddleParser.RULE_call);
	    var _la = 0;
	    try {
	        this.state = 223;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,26,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 169;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===4) {
	                this.state = 168;
	                this.extension_id();
	            }

	            this.state = 171;
	            this.match(HeddleParser.OUT_PARAMSTART);
	            this.state = 172;
	            this.match(HeddleParser.CSHARP_START);
	            this.state = 173;
	            this.csharp_expression();
	            this.state = 174;
	            this.match(HeddleParser.OUT_PARAMEND);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 177;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===4) {
	                this.state = 176;
	                this.extension_id();
	            }

	            this.state = 179;
	            this.match(HeddleParser.OUT_PARAMSTART);
	            this.state = 183;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 180;
	                this.match(HeddleParser.WS);
	                this.state = 185;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 187;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===4 || _la===5) {
	                this.state = 186;
	                this.member_expression();
	            }

	            this.state = 189;
	            this.match(HeddleParser.OUT_PARAMEND);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 191;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===4) {
	                this.state = 190;
	                this.extension_id();
	            }

	            this.state = 193;
	            this.match(HeddleParser.OUT_PARAMSTART);
	            this.state = 194;
	            this.chain();
	            this.state = 195;
	            this.match(HeddleParser.OUT_PARAMEND);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 198;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===4) {
	                this.state = 197;
	                this.extension_id();
	            }

	            this.state = 200;
	            this.match(HeddleParser.OUT_PARAMSTART);
	            this.state = 201;
	            this.native_expression();
	            this.state = 202;
	            this.match(HeddleParser.OUT_PARAMEND);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 205;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===4) {
	                this.state = 204;
	                this.extension_id();
	            }

	            this.state = 207;
	            this.match(HeddleParser.OUT_PARAMSTART);
	            this.state = 211;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,24,this._ctx);
	            if(la_===1) {
	                this.state = 208;
	                this.expr(0);
	                this.state = 209;
	                this.match(HeddleParser.COMMA);

	            }
	            this.state = 213;
	            this.named_argument();
	            this.state = 218;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===53) {
	                this.state = 214;
	                this.match(HeddleParser.COMMA);
	                this.state = 215;
	                this.named_argument();
	                this.state = 220;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 221;
	            this.match(HeddleParser.OUT_PARAMEND);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	named_argument() {
	    let localctx = new Named_argumentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, HeddleParser.RULE_named_argument);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 225;
	        this.match(HeddleParser.ID);
	        this.state = 226;
	        this.match(HeddleParser.DELIM);
	        this.state = 227;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	member_expression() {
	    let localctx = new Member_expressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, HeddleParser.RULE_member_expression);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 230;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5) {
	            this.state = 229;
	            this.match(HeddleParser.ROOT_REF);
	        }

	        this.state = 232;
	        this.match(HeddleParser.ID);
	        this.state = 237;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===6) {
	            this.state = 233;
	            this.match(HeddleParser.MEMBER_P);
	            this.state = 234;
	            this.match(HeddleParser.ID);
	            this.state = 239;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	extension_id() {
	    let localctx = new Extension_idContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, HeddleParser.RULE_extension_id);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 240;
	        this.match(HeddleParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


